cinema5d-7; add component and scss for header

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,4 +1,12 @@
+@import "../../assets/scss/config-style.scss";
+
 * {
 	margin: 0;
 	padding: 0;
+}
+
+body {
+  width: 100%;
+  background-color: $mainBackground;
+  box-sizing: border-box;
 }
