--- a/src/assets/scss/style.css
+++ b/src/assets/scss/style.css
@@ -2,4 +2,11 @@
   margin: 0;
   padding: 0;
 }
+
+body {
+  width: 100%;
+  background-color: white;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
 /*# sourceMappingURL=style.css.map */
