--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -2,23 +2,31 @@
 @import "../../assets/scss/config-style.scss";
 
 * {
-	margin: 0;
-	padding: 0;
-}
-
-body {
-  width: 100%;
-  background-color: $mainBackground;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
+body {
+  height: 100vh;
+  width: 100%;
+  background-color: $mainBackground;
+  font-family: Arial,  sans-serif;
+  color: $mainFontColor;
+}
+
+/*
 .wrapper {
   display: flex;
   flex-direction: column;
 }
+*/
 
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin: 0 auto;
+  max-width: 100rem;
 }
