--- a/src/components/header/style.module.scss
+++ b/src/components/header/style.module.scss
@@ -34,3 +34,13 @@
 .userBlock {
   position: relative;
 }
+
+.user {
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  transition: color 0.5s;
+  &:hover {
+    color: #ccc;
+  }
+}
